Implementado envio de Report e feito alguns ajustes
