# service/src/main/java/br/com/sw2you/realmeet/validator/ValidatorConstants.java
@@ -10,10 +10,13 @@ public final class ValidatorConstants {
     public static final int ROOM_SEATS_MAX_VALUE = 20;
     public static final String ALLOCATION_ID = "id";
     public static final String ALLOCATION_SUBJECT = "subject";
-    public static final String ALLOCATION_EMPLOYEE_NAME = "name";
-    public static final String ALLOCATION_EMPLOYEE_EMAIL = "email";
+    public static final String ALLOCATION_EMPLOYEE_NAME = "employeeName";
+    public static final String ALLOCATION_EMPLOYEE_EMAIL = "employeeEmail";
     public static final String ALLOCATION_START_AT = "startAt";
     public static final String ALLOCATION_END_AT = "endAt";
+    public static final String DATE_FROM = "dateFrom";
+    public static final String DATE_TO = "dateTo";
+    public static final String EMAIL = "email";
     public static final String ORDER_BY = "orderBy";
 
     public static final int ALLOCATION_SUBJECT_MAX_LENGTH = 60;
@@ -29,8 +32,9 @@ public final class ValidatorConstants {
     public static final String INCONSISTENT = ".inconsistent";
     public static final String IN_THE_PAST = ".inThePast";
     public static final String EXCEEDS_DURATION = ".exceedsDuration";
-    public static final String INVALID = ".invalid";
+    public static final String EXCEEDS_INTERVAL = ".exceedsInterval";
     public static final String OVERLAPS = ".overlaps";
+    public static final String INVALID = ".invalid";
 
     private ValidatorConstants() {
     }
